--- a/index.html
+++ b/index.html
@@ -301,25 +301,24 @@
             </div>
           </div>
         </div>
-        <!-- <div
+        <div
           class="projek-col col-sm-12 col-md-12 col-lg-6 col-xl-4"
           data-aos="flip-left"
         >
           <div class="card" style="width: 20rem">
             <img src="img/Projek-KPPN.png" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Menu Internal KPPNY</h5>
+              <h5 class="card-title">Laporan 2 - Konfigurasi IP Address Perangkat Mikrotik</h5>
               <div class="mb-2">
                 <span class="badge rounded-pill text-bg-secondary"
-                  >PHP Native</span
+                  >Mikrotik</span
                 >
                 <span class="badge rounded-pill text-bg-secondary"
-                  >Bootstrap</span
+                  >Winbox</span
                 >
               </div>
               <p class="card-text">
-                Menu Internal KPPNY adalah website untuk mengelola urusan
-                internal kantor.
+                Membahas mengenai langkah" konfigurasi perangkat Mikrotik menggunakan Winbox
               </p>
               <div class="pt-2">
                 <a
@@ -329,18 +328,11 @@
                   data-bs-target="#modal2"
                   >Detail</a
                 >
-                <a
-                  href="https://internal.kppnjogja.id/"
-                  target="_blank"
-                  class="btn border-dark border-1"
-                  id="btn-preview"
-                  >Preview</a
-                >
               </div>
             </div>
           </div>
         </div>
-        <div
+        <!-- <div
           class="projek-col col-sm-12 col-md-12 col-lg-6 col-xl-4"
           data-aos="flip-left"
         >
@@ -378,7 +370,7 @@
             </div>
           </div>
         </div>
-      </div> -->
+      </div> --> 
 
       <!-- hidden projek -->
       <!-- <div id="collapseExample" class="collapse">
@@ -772,69 +764,106 @@
                 alt="cover"
               />
             </div>
-            <div class="icon">
-              <i class="bi bi-laptop-fill text-success"></i>
+            <div class="">
+              <i class=""></i>
             </div>
             <div class="modal-body mt-4 pb-5">
-              <h1 class="modal-title fs-1">Menu Internal KPPN Yogyakarta</h1>
+              <h1 class="modal-title fs-1">Laporan 2 - Konfigurasi IP Address Perangkat Mikrotik</h1>
               <span class="badge rounded-pill text-bg-secondary"
-                >Php Native</span
+                >Mikrotik</span
               >
               <span class="badge rounded-pill text-bg-secondary"
-                >Bootstrap</span
+                >Winbox</span
               >
               <!-- content -->
               <div class="content mt-5">
-                <div class="row">
-                  <div class="col-sm-12 col-lg-3">
-                    <div class="modal-label bi bi-justify-left text-secondary">
-                      Project Overview
-                    </div>
-                  </div>
-                  <div class="col-sm-12 col-lg-9">
-                    <p class="modal-p">
-                      Menu internal KPPN Yogyakarta adalah website yang
-                      digunakan oleh internal kantor atau karyawan-karyawan
-                      KPPNY untuk mengelola urusan internal kantor seperti
-                      perizinan karyawan, Kuisioner, Laporan Kinerja dan
-                      lain-lain.
-                    </p>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-sm-12 col-lg-3">
-                    <div
-                      class="modal-label bi bi-caret-down-square text-secondary"
-                    >
-                      Category
-                    </div>
-                  </div>
-                  <div class="col-sm-12 col-lg-9">
-                    <p class="modal-p">Web</p>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-sm-12 col-lg-3">
-                    <div class="modal-label bi bi-list-ul text-secondary">
-                      My Role
-                    </div>
-                  </div>
-                  <div class="col-sm-12 col-lg-9">
-                    <p class="modal-p">Back-End Developer</p>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-sm-12 col-lg-3">
-                    <div class="modal-label bi bi-justify-left text-secondary">
-                      Link Website
-                    </div>
-                  </div>
-                  <div class="col-sm-12 col-lg-9">
-                    <a
-                      href="https://internal.kppnjogja.id/"
-                      class="modal-p text-secondary"
-                      >https://internal.kppnjogja.id/</a
-                    >
+                <div class="">
+                  <div class="">
+                    <div class="">
+                     <strong>PEMBAHASAN</strong>
+                     <hr>
+                     <strong>Pengertian IP Address</strong>
+                     <br>
+                     IP Address (Internet Protocol Address) adalah sebuah alamat unik yang digunakan untuk mengidentifikasi perangkat dalam jaringan komputer, baik jaringan lokal maupun internet.
+                     <hr>
+                     <strong>Jenis - Jenis IP Address</strong>
+                     <hr>
+                     <strong>IP Address Publik (Public IP Address)</strong>
+                     <br>
+                     adalah IP yang digunakan untuk mengidentifikasi perangkat di jaringan internet global dan IP ini unik dan dialokasikan oleh penyedia layanan internet (ISP). contohnya :
+                     <br>
+                     <li>192.0.2.1</li>
+                     <li>203.0.113.5</li>
+                     <li>8.8.8.8 (Google DNS Server)</li>
+                     <br>
+                     IP Publik biasanya unik dan digunakan untuk perangkat yang terhubung langsung ke internet seperti server web, router yang menyediakan akses internet, dll.
+                     <br>
+                     <br>
+                     <strong>IP Address Privat (Private IP Address)</strong>
+                     <br>
+                     Adalah IP yang digunakan di dalam jaringan lokal (LAN) dan tidak dapat diakses langsung dari internet, dan Rentang IP privat sudah ditentukan dan tidak dapat digunakan untuk jaringan publik. Contohnya :
+                     <br>
+                     <li>Rentang IP Privat Kelas A (10.0.0.0 – 10.255.255.255)</li>
+                     <li>Rentang IP Privat Kelas B (172.16.0.0 – 172.31.255.255)</li>
+                     <li>Rentang IP Privat Kelas C (192.168.0.0 – 192.168.255.255)</li>
+                     <br>
+                     IP Privat ini digunakan oleh perangkat seperti komputer, router, atau smartphone yang terhubung ke jaringan lokal (LAN).
+                     <hr>
+                     <strong>IP Address</strong> 
+                     <hr>
+                     <strong>IPv4 (Internet Protocol version 4)</strong>
+                     <br>
+                     Alamat IP dengan panjang 32 bit, biasanya ditulis dalam format desimal dipisahkan oleh titik ".", dan IPv4 mendukung sekitar 4,3 miliar alamat, yang mulai habis karena semakin banyak perangkat yang terhubung ke internet.
+                     <br>Contohnya <strong>192.168.1.1</strong>
+                     <br>
+                     <br>
+                     <strong>IPv6 (Internet Protocol version 6)</strong>
+                     <br>
+                     Alamat IP dengan panjang 128 bit, ditulis dalam format heksadesimal dipisahkan oleh tanda titik dua ":", IPv6 diciptakan untuk mengatasi keterbatasan IPv4 dan mendukung jumlah alamat yang jauh lebih besar. 
+                     <br>Contohnya <strong>2001:db8::ff00:42:8329</strong>
+                     <hr>
+                     <strong>Langkah - Langkah Konfigurasi IP Address Perangkat Mikrotik Menggunakan Winbox</strong>
+                     <hr>
+                     <li>Pertama hidupkan terlebih dahulu pernagkat mikrotiknya dengan menghubungkan kabel powernya</li>
+                     <li>Lalu pasang kabel LAN (RJ45) ke port Ether1 dan ujung satunya lagi ke sumber internet (ISP)</li>
+                     <li>Pasang Juga kabel LAN ke port Ether2 dan ujung satunya lagi ke perangkat yang kita gunakan (PC Client)</li>
+                     <br>
+                     <strong>Login ke Mikrotik melalui Winbox</strong>
+                     <br>
+                     <li>Buka aplikasi Winbox, lalu Pada tab <Strong>Neighbors</Strong>, pilih perangkat Mikrotik Anda</li>
+                     <li>Masukkan Username (default: admin) dan Password (default: kosong/tidak ada)</li>
+                     <li>Klik <strong>Connect</strong> untuk masuk ke antarmuka Mikrotik.</li>
+                     <br>
+                     <strong>Konfigurasi IP Address Menggunakan DHCP Client</strong>
+                     <li>buka <strong>IP > DHCP Client</strong> di tab sebelah kiri, Klik tombol <strong>"+"</strong></li>
+                     <li>Pada kolom <strong>Interface</strong>, pilih interface WAN (misalnya, ether1).</li>
+                     <li>Centang opsi <strong>Add Default Route</strong> agar rute otomatis ditambahkan Klik <strong>Apply</strong> dan <strong>OK</strong></li>
+                     <br>
+                     <strong>Konfigurasi Gateway (Default Route)</strong>
+                     <br>
+                     <li>Buka <strong>IP > Routes</strong>.</li>
+                     <li>Jika menggunakan DHCP Client, default route akan secara otomatis ditambahkan. Jika tidak Klik tombol <strong>"+"</strong>Pada kolom <strong>Dst. Address</strong>, isikan 0.0.0.0/0 (untuk mengarahkan semua lalu lintas keluar).</li>
+                     <li>Pada kolom <strong>Gateway</strong>, masukkan alamat IP gateway yang diberikan oleh ISP (misalnya: 192.168.1.1).</li>
+                     <li>Klik <strong>Apply</strong> dan <strong>OK</strong></li>
+                     <br>
+                     <strong>Konfigurasi DNS</strong>
+                     <br>
+                     <li>Buka <strong>IP > DNS</strong>.</li>
+                     <li>Pada kolom <strong>Servers</strong>, masukkan DNS server yang diberikan oleh ISP atau gunakan DNS umum seperti 8.8.8.8 (Google DNS) dan 1.1.1.1 (Cloudflare DNS).</li>
+                     <li>Centang <strong>Allow Remote Requests</strong> jika Anda ingin perangkat lain di jaringan bisa menggunakan Mikrotik sebagai server DNS.</li>
+                     <li>Klik <strong>Apply</strong> dan <strong>OK</strong></li>
+                     <br>
+                     <strong>Konfigurasi NAT (Network Address Translation)</strong>
+                     <li>Buka <strong>IP > Firewall</strong>, kemudian pilih tab <strong>NAT</strong> dan Klik tombol <strong>"+"</strong> </li>
+                     <li>Pada tab <strong>General</strong>, atur <strong>Chain:</strong> srcnat, <strong>Out. Interface:</strong> Pilih interface WAN yang terhubung ke ISP (misalnya, ether1).</li>
+                     <li>Pindah ke tab <strong>Action</strong>, dan pilih <strong>Action: masquerade</strong>.</li>
+                     <li>Klik <strong>Apply</strong> dan <strong>OK</strong></li>
+                     <br>
+                     <strong>Konfigurasi LAN</strong>
+                     <li><strong>Buka IP > Addresses</strong>, dan tambahkan IP untuk jaringan internal (misalnya, <strong>192.168.88.1/24</strong> pada interface ether2).</li>
+                     <li>Jika Anda membutuhkan <strong>DHCP Server</strong> untuk jaringan LAN : Buka <strong>IP > DHCP Server</strong>, Buat konfigurasi DHCP Server untuk interface LAN (ether2), dan atur range IP yang diberikan ke perangkat di jaringan.</li>
+                     <br>
+                     Dengan mengikuti langkah-langkah ini, perangkat Mikrotik Anda akan berhasil terhubung ke ISP dan mendistribusikan koneksi internet ke jaringan lokal.
                   </div>
                 </div>
               </div>
