--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
           data-aos="flip-left"
         >
           <div class="card" style="width: 20rem">
-            <img src="img/Projek-KPPN.png" class="card-img-top" alt="..." />
+            <img src="img/konfigurasi.png" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Laporan 2 - Konfigurasi IP Address Perangkat Mikrotik</h5>
               <div class="mb-2">
